# cookiecutter-tornado

./: .flake8  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTORS  Dockerfile  LICENSE  LICENSE.rst  Pipfile  README.md  README.rst  Vagrantfile  bootstrap.sh  cookiecutter.json  fabfile.py  pyproject.toml  pytest.ini  requirements_dev.txt  run.py  settings.py  setup.cfg  setup.py  tox.ini  urls.py
.github/workflows/: python_test.yml  test.yml
hooks/: post_gen_project.py  pre_gen_project.py
requirements/: dev-req.txt  stable-req.txt
templates/: base.html  index.html
tests/: conftest.py  test_bake_project.py  test_baket_project.py
tools/: pylint.rc
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .isort.cfg  AUTHORS.rst  Dockerfile  LICENSE  README.rst  Vagrantfile  bootstrap.sh  docker-compose.yml  fabfile.py  pytest.ini  run.py  settings.py  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/docs/: make.bat
{{cookiecutter.project_slug}}/requirements/: base.txt  dev.txt  local.txt  prod.txt  test.txt
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: urls.py
{{cookiecutter.repo_name}}/: .bumpversion.cfg  .gitignore  .isort.cfg  CHANGELOG.md  Dockerfile  MANIFEST.in  Vagrantfile  docker-compose.yml  pytest.ini  requirements.txt  run.py  settings.py  setup.cfg  setup.py  tox.ini
{{cookiecutter.repo_name}}/docs/: Makefile
{{cookiecutter.repo_name}}/requirements/: base.txt  dev.txt
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: version.py
(+6 files in other folders)
