[tool.poetry]
name = "cookiecutter-tornado"
version = "0.3.0"
description = "Cookiecutter template for Tornado based projects"
authors = ["Henning Kage <henning.kage@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "<6.0.0"
pytest-cookies = "^0.5.1"
cookiecutter = "^1.7.2"

[build-system]
requires = ["poetry>=1.14"]
build-backend = "poetry.masonry.api"
