[tool.poetry]
name = "cookiecutter-tornado"
version = "0.3.0"
description = "Cookiecutter template for Tornado based projects"
authors = ["Henning Kage <henning.kage@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
pytest-cookies = "^0.6.1"
cookiecutter = "^2.1.1"

[build-system]
requires = ["poetry>=1.14"]
build-backend = "poetry.masonry.api"
