[tool.poetry]
name = "cookiecutter-tornado"
version = "0.3.0"
description = "Cookiecutter template for Tornado based projects"
authors = ["Henning Kage <henning.kage@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/hkage/cookiecutter-tornado"
repository = "https://github.com/hkage/cookiecutter-tornado.git"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
cookiecutter = "^2.1.1"
flake8 = "^4.0.1"
pytest = ">=7.1.2"
pytest-cookies = "^0.6.1"

[build-system]
requires = ["poetry>=1.14"]
build-backend = "poetry.masonry.api"
